[package]
name = "blockgame"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
ggez = "0.4"
nalgebra = { version = "0.14", features = ["serde-serialize"] }
slog = "2"
noise = "0.5"
lagato = { path = "../common/lagato" }
lagato-ggez = { path = "../common/lagato-ggez" }
blockengine = { path = "../common/blockengine" }
